@@ -1,3 +1,7 @@
+Wed Sep 29 00:37:44 BOT 2010
+  * Modification for ruby-1.9.2
+    * Replaced STR2CSTR to StringValuePtr
+	
 Mon Mar 22 23:54:07 MDT 2010
   * GSL-1.14 support
     * Added GSL::Multiset class
